src/objects/kanbanDev__Kanban_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>kanbanDev__Child_Object__c</fullName>
        <label>Child Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kanbanDev__Exclude_From_Group_By__c</fullName>
        <label>Exclude From Group By</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kanbanDev__Fields_To_Show__c</fullName>
        <label>Fields To Show</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kanbanDev__For_Object__c</fullName>
        <label>For Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kanbanDev__Group_By__c</fullName>
        <label>Group By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kanbanDev__Kanban_For__c</fullName>
        <label>Kanban For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kanbanDev__Name_Field__c</fullName>
        <label>Name Field(Do Not Edit)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kanbanDev__Relation_Field__c</fullName>
        <label>Relation Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kanbanDev__Summarize_By__c</fullName>
        <label>Summarize By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Kanban Configuration</label>
    <listViews>
        <fullName>kanbanDev__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Kanban Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kanban Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>